# tribe

./: .env.example  .gitignore  README.md  nextsteps.txt  pyproject.toml  setup_runpod.sh  start.sh
.claude/: settings.local.json
docs/: claude_predictor.md  claude_predictor_prompt.md  llm_compressor_prompt.md  operator_readiness_profile.md
scripts/: add_enriched_stress.py  add_module.py  add_sa_module.py  add_stress_module.py  batch_ingest_claude.py  new_operator_test.py  run_all_subjects.sh  seed_operator.py  train_subcortical.py  validate_phase1.py  validate_phase2.py  validate_subcortical.py
src/htb_brain/: config.py
src/htb_brain/api/: app.py  dependencies.py  schemas.py
src/htb_brain/api/routes/: aggregate.py  classify.py  health.py  mastery.py  predict.py  predict_claude.py  predict_video.py  profile.py
src/htb_brain/core/: aggregator.py  atlas.py  claude_predictor.py  completion_classifier.py  mastery_store.py  operator_readiness.py  ori.py  predictor.py  profile_store.py  skill_mastery.py  subcortical_aggregator.py  subcortical_atlas.py  subcortical_predictor.py  translator.py
src/htb_brain/data/: cognitive_map.json  subcortical_cognitive_map.json
src/htb_brain/static/brain_viewer/: brain-viewer.css  brain-viewer.js  colormaps.js  index.html  tooltip.js
src/htb_brain/static/mastery/: index.html  mastery.css  mastery.js
src/htb_brain/static/operator_readiness/: index.html  readiness.css  readiness.js
src/htb_brain/visualization/: mesh_export.py  subcortical_mesh_export.py  summary.py
tests/: test_completion_classifier.py
(+2 files in other folders)
