[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "htb-brain"
version = "0.1.0"
description = "HackTheBox Brain Engagement Service — TRIBE v2 integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "nilearn>=0.11.0",
    "nibabel>=5.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "httpx>=0.27",
    "pillow>=10.0",
    "trimesh>=4.0",
    "pygltflib>=1.16",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
